2008-01-16  Ulf Jasper  <ulf.jasper@web.de>

	* calendar/icalendar.el (icalendar-version): Increase to 0.16.
	(icalendar-export-file, icalendar-import-file): Restore
	significant trailing whitespace in `interactive' prompts.

2008-01-16  Tom Tromey  <tromey@redhat.com>

	* calendar/icalendar.el (icalendar--convert-tz-offset)
	(icalendar--parse-vtimezone, icalendar--convert-all-timezones)
	(icalendar--find-time-zone): New functions.
	(icalendar--decode-isodatetime): Add `zone' argument, passed to
	`decode-time'.  Doc fix.
	(icalendar--convert-ical-to-diary): Compute zone-map.  Pass
	timezone to icalendar--decode-isodatetime.

2008-01-16  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-vars.el (c-constant-symbol): Put this defun inside
	an eval-and-compile, so as to permit byte-compiling (e.g. in
	bootstrap).

2008-01-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easymenu.el (easy-menu-avoid-duplicate-keys): New var.
	(easy-menu-create-menu, easy-menu-convert-item-1): Use it to avoid
	using the same key for different menu entries.

	* smerge-mode.el (smerge-refine): Also work on "same change conflicts".
	(smerge-makeup-conflict): New command.

2008-01-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* log-edit.el (log-edit): Doc fix.

2008-01-15  Glenn Morris  <rgm@gnu.org>

	* diff-mode.el (diff-end-of-hunk): Revert 2008-01-08 change.

2008-01-14  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-vars.el (c-constant-symbol): New function which
	supersedes c-const-symbol.  During a customize-.. call it enables
	an element of (e.g.) c-hanging-braces alist to have its name
	displayed, even when the default value of c-h-b etc. doesn't
	include the elemnt.  Replace uses of the old function by the new.

	* progmodes/cc-vars.el (c-hanging-braces-alist): Remove the
	obscure non-working fragment ":value c-".

2008-01-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* abbrev.el (clear-abbrev-table): Can't pass a symbol to intern.
